Fix(elasticsearch): Preserve array and prefix domains